Added support info mdx component

--- a/src/text/help/accessibility/report-issues.mdx
+++ b/src/text/help/accessibility/report-issues.mdx
@@ -4,8 +4,10 @@ import Common from 'MateriaCommon'
 
 If you encounter any accessibility barriers or have suggestions for improvement, please contact us:
 
-**Email:**\
+**Email:**
+
 {Common.accessibilityEmail}
 
-**Online:**\
+**Online:**
+
 {Common.accessibilityReportLink}
