--- a/src/text/help/home/support.mdx
+++ b/src/text/help/home/support.mdx
@@ -4,11 +4,14 @@ import Common from 'MateriaCommon'
 
 If you need help beyond what has been provided here, please contact support using one of the following:
 
-**Support**\
+**Support**
+
 [{Common.supportWebsite}]({Common.supportWebsite})
 
-**Email**\
+**Email**
+
 {Common.supportEmail}
 
-**Phone**\
+**Phone**
+
 {Common.supportPhoneNumber}
